# Nonogram

./: CMakeLists.txt  README.md
puzzles/1 Trivial/: 01.sgriddler  02.nonogram  02.sgriddler  03.nonogram  05.nonogram  10.sgriddler
puzzles/1 Tutorial/: 04 tutorial.sgriddler  07 tutorial.sgriddler  08 tutorial.sgriddler  09 tutorial.sgriddler  tutorial.sgriddler
puzzles/2 Easy/: anime.sgriddler  aquarius.nonogram  bird.nonogram  butterfly.nonogram  calimero.sgriddler  car.nonogram  cobra.nonogram  cottage2.nonogram  dante.nonogram  doggie.sgriddler  face.nonogram  flower.sgriddler  frog.nonogram  galleon2.nonogram  genie.nonogram  giraffe.nonogram  grapes.nonogram  hurdler.sgriddler  katherine.nonogram  lady.sgriddler  monkey.nonogram  moon1.sgriddler  nicole.nonogram  nipper.sgriddler  owl.nonogram  pagoda.nonogram  parade.sgriddler  puppy.nonogram  rose1.sgriddler  rose2.nonogram  sail.nonogram  shark.nonogram  smurf.sgriddler  snowboarder.sgriddler  teddybear.nonogram  virgo.sgriddler  waltz.nonogram  witch.sgriddler
puzzles/2 Normal/: alien.nonogram  badger.sgriddler  bear1.sgriddler  blackbird.nonogram  bull.nonogram  checkmate.nonogram  cottage1.nonogram  cube.nonogram  dog.nonogram  donkey.sgriddler  dragon2.sgriddler  eagle.nonogram  fruits.nonogram  galleon3.nonogram  galleon4.nonogram  hedgehog.nonogram  horse4.nonogram  house.nonogram  jester.sgriddler  kittie.nonogram  man1.nonogram  mississippi.sgriddler  moon2.nonogram  picnic.nonogram  puppy2.sgriddler  woman1.sgriddler  zoo.sgriddler
puzzles/3 Tough/: appaloosa.sgriddler  bear2.nonogram  campfire.sgriddler  cow.sgriddler  dance.nonogram  dragon.sgriddler  drakkar.nonogram  ernie.sgriddler  feeding.nonogram  fish.sgriddler  galleon1.sgriddler  heavymetal.sgriddler  herrculestower.nonogram  horse1.nonogram  horse2.nonogram  horse3.nonogram  horse4.nonogram  huskie.sgriddler  jaguar.sgriddler  kart.nonogram  knitting.sgriddler  man2.nonogram  music.sgriddler  mustang.nonogram  ogle.sgriddler  oldlace.nonogram  oldman.nonogram  pacifier.nonogram  pony.nonogram  rose3.sgriddler  santa.nonogram  saracen.nonogram  scale.nonogram  superman.nonogram  truck.nonogram  vikingsboat.sgriddler  wolf.sgriddler  woman2.sgriddler  worker.sgriddler
src/nonogram/: CMakeLists.txt  main.cpp
src/nonogram/data/: Answer.cpp  Answer.hpp  Array2D.hpp  ClueStates.cpp  ClueStates.hpp  Clues.cpp  Clues.hpp  Nonogram.cpp  Nonogram.hpp  Solution.cpp  Solution.hpp  VectorOfVectors.hpp
src/nonogram/data/clues/: Data.hpp  FullIndex.cpp  FullIndex.hpp  FullIndices.hpp  MainIndex.hpp  MinorIndex.hpp
src/nonogram/data/grid/: Cell.cpp  Cell.hpp  Cells.hpp  Column.hpp  Data.hpp  Row.hpp
src/nonogram/file/: Puzzles.cpp  Puzzles.hpp
src/nonogram/gui/: LevelSelection.cpp  LevelSelection.hpp  MainWindow.cpp  MainWindow.hpp  PlayField.cpp  PlayField.hpp  StartMenu.cpp  StartMenu.hpp  painting.cpp  painting.hpp
src/nonogram/gui/command/: Base.cpp  Base.hpp  Cross.cpp  Cross.hpp  Fill.cpp  Fill.hpp  Lock.cpp  Lock.hpp
src/nonogram/util/: CenteredRect.cpp  CenteredRect.hpp  ScopedQPainterState.cpp  ScopedQPainterState.hpp  hard_integral_typedef.hpp  hard_integral_typedef.ipp  hard_qstring_typedef.hpp  hard_qstring_typedef.ipp  optional_if.hpp  print_exception.cpp  print_exception.hpp  unique_qt_ptr.hpp
